Players can resign during their turn. Players can restart the game if over. Stopped forward declaring functions

--- a/sfml-checkers/sfml-checkers.vcxproj
+++ b/sfml-checkers/sfml-checkers.vcxproj
@@ -145,9 +145,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="piece.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="button.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="piece.h" />
     <ClInclude Include="textures.h" />
